--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "author": "Emilio Almansi",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "pg": "^7.4.0",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "pg": "6.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.22.4",
     "underscore": "^1.8.3",
