--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "author": "Emilio Almansi",
   "license": "MIT",
   "dependencies": {
+    "basic-auth": "^2.0.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "http-status-codes": "^1.3.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "pg": "6.4.1",
