--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "http-status-codes": "^1.3.0",
+    "json-parse-safe": "^1.0.3",
+    "momentjs": "^2.0.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "pg": "6.4.1",
