--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "basic-auth": "^2.0.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "capitalize": "^1.0.0",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
