--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "REACT_APP_API_HOST='http://localhost:3005' react-scripts start",
     "build": "REACT_APP_API_HOST='https://travelly-api.herokuapp.com' react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "author": "Emilio Almansi",
