--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "moment": "^2.19.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "yarn": "^1.3.2"
   },
   "scripts": {
     "start": "REACT_APP_API_HOST='http://localhost:3005' react-scripts start",
