--- a/api/package.json
+++ b/api/package.json
@@ -1,25 +1,34 @@
 {
   "name": "travelly-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "ENV=testing LOG_LEVEL=info DATABASE_LOGGING=true ./node_modules/mocha/bin/mocha --timeout 10000 --recursive test/ unit/",
-    "unit": "ENV=testing LOG_LEVEL=info DATABASE_LOGGING=true ./node_modules/mocha/bin/mocha --recursive unit/"
-  },
-  "engines": {
-    "node": "~8.1.4",
-    "npm": "~5.5.1"
-  },
+  "description": "Travelly - your friendly travel planner",
+  "private": true,
   "keywords": [
     "travelly",
     "friendly",
     "travel",
     "planner"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ealmansi/travelly.git"
+  },
   "author": "Emilio Almansi",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ealmansi/travelly/issues"
+  },
+  "homepage": "https://github.com/ealmansi/travelly#readme",
+  "engines": {
+    "node": "~8.1.4",
+    "npm": "~5.5.1"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "ENV=testing LOG_LEVEL=info DATABASE_LOGGING=true ./node_modules/mocha/bin/mocha --timeout 10000 --recursive test/ unit/",
+    "unit": "ENV=testing LOG_LEVEL=info DATABASE_LOGGING=true ./node_modules/mocha/bin/mocha --recursive unit/"
+  },
   "dependencies": {
     "basic-auth": "^2.0.0",
     "bcrypt": "^1.0.3",
